--- a/checks/templates/checks/control_event_result.html
+++ b/checks/templates/checks/control_event_result.html
@@ -22,18 +22,12 @@
             <div class="right_column__common-information__description">Общий результат (баллы)</div>
             <div class="right_column__common-information__result"><span class="score">{{score}} {{status}}</span></div>
         </div>
+        {% for employee, score in employee_count_score.items %}
         <div class="right_column__common-information">
-            <div class="right_column__common-information__description">Результат управляющего (баллы)</div>
-            <div class="right_column__common-information__result"><span class="score">{{manager_responsibility}}</span></div>
+            <div class="right_column__common-information__description">{{employee}}</div>
+            <div class="right_column__common-information__result"><span class="score">{{score}}</span></div>
         </div>
-        <div class="right_column__common-information">
-            <div class="right_column__common-information__description">Результат управляющего по производству (баллы)</div>
-            <div class="right_column__common-information__result"><span class="score">{{production_responsibility}}</span></div>
-        </div>
-        <div class="right_column__common-information">
-            <div class="right_column__common-information__description">Результат Менеджера ТРС (баллы)</div>
-            <div class="right_column__common-information__result"><span class="score">{{retail_manager_responsibility}}</span></div>
-        </div>
+        {% endfor %}
         <a class="right-column__btn" href="{% url 'download_check_list' control_event_id %}">
             <span class="right-column__btn-name">Загрузить чек-лист</span>
         </a>
