--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -15,7 +15,10 @@
 	<body>
         {% block head %}
         <div class="head">
-            <div class="logo">Информационная система<br>ревизионного отдела</div>
+            <div class="logo">
+                Информационная система<br>ревизионного отдела
+                <span class="version">version 1.1</span>
+            </div>
             <div class="head-items">
                 <div class="head__item">
                     <a class="head-link" href="{% url 'start_page' %}">Главная</a>
