--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,6 +98,10 @@ aside {
     font-weight: bold;
     }
 
+.version {
+    font-size: 0.5em;
+}
+
 input[type='radio'] {
     align-self: center;
 }
