feat: change grade

--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -17,7 +17,7 @@
         <div class="head">
             <div class="logo">
                 Информационная система<br>ревизионного отдела
-                <span class="version">version 1.1</span>
+                <span class="version">default (1.2.3)</span>
             </div>
             <div class="head-items">
                 <div class="head__item">
